--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "Gulp Live-Reload for Silex",
+  "name": "name",
   "version": "1.0.0",
   "repository": "https://github.com/Maxlab",
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-livereload": "^3.8.0"
+    "gulp-livereload": "^3.8.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-csso": "^1.0.0",
+    "gulp-sass": "^1.3.3"
   }
 }
